@@ -1,3 +1,10 @@
+2006-04-10	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c(exo_icon_view_button_press_event),
+	  exo/exo-icon-view.c(exo_icon_view_single_click_timeout): Apply patch
+	  from Matt McClinch <mattmcclinch@gmail.com> to further improve
+	  Shift-selection handling.
+
 2006-04-09	Benedikt Meurer <benny@xfce.org>
 
 	* icons/Makefile.am: Be sure to run gtk-update-icon-cache after
